--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -8,6 +8,7 @@
       "entities": {
         "main": "Entités",
         "points": "Points",
+        "preferences": "Preferences",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
